Se agrego la seccion 1.8

--- a/index.html
+++ b/index.html
@@ -186,5 +186,14 @@
             <p>2. Muestreo no probabilístico:</p><br>
             <p>En el muestreo no probabilístico, no se conoce la probabilidad de selección de cada elemento de la población. Esto significa que no todos los elementos tienen la misma oportunidad de ser incluidos en la muestra.</p><br>
     </section>
+
+    <section> <h2>1.8. Histogramas.</h2>
+        <p>Un histograma es una representación gráfica que utiliza barras para mostrar la distribución de datos cuantitativos. Se construye dividiendo el rango de valores en intervalos o clases, y luego contando la frecuencia de datos que caen dentro de cada intervalo. 
+            La altura de cada barra del histograma representa la frecuencia de datos para el intervalo correspondiente.
+        <br>son herramientas gráficas fundamentales en el ámbito de la probabilidad y la estadística, utilizados para representar la distribución de datos cuantitativos. </p> <br>
+
+
+    </section>
+    <p>Autor: Yael Antonio Chavez Atanacio</p>
 </body>
 </html>
