Se completo el diseño

--- a/index.html
+++ b/index.html
@@ -140,11 +140,11 @@
         <p>En probabilidad, los parámetros para datos agrupados se utilizan para describir las características de una distribución de probabilidad a partir de datos que han sido agrupados en intervalos o clases. 
             Estos parámetros son útiles para analizar la distribución de la variable aleatoria sin tener que trabajar con los datos individuales. Los principales parámetros para datos agrupados son:</p> <br>
 
-            <p>Frecuencia absoluta: Es el número de veces que aparece un determinado valor o rango de valores dentro de una clase. Se representa con la letra f.</p><br>
+            <p><n style="font-size: 20px; color: #94e468;">Frecuencia absoluta:</n> Es el número de veces que aparece un determinado valor o rango de valores dentro de una clase. Se representa con la letra f.</p><br>
 
-            <p>Frecuencia relativa: Es la proporción de veces que aparece un determinado valor o rango de valores dentro de una clase, expresada como un porcentaje o una fracción. Se calcula dividiendo la frecuencia absoluta por el total de datos. Se representa con la letra fr.</p><br>
+            <p><n style="font-size: 20px; color: #94e468;">Frecuencia relativa:</n> Es la proporción de veces que aparece un determinado valor o rango de valores dentro de una clase, expresada como un porcentaje o una fracción. Se calcula dividiendo la frecuencia absoluta por el total de datos. Se representa con la letra fr.</p><br>
 
-            <p>Frecuencia acumulada: Es la suma de las frecuencias absolutas o relativas desde el primer intervalo hasta el intervalo que se está considerando. Se representa con las letras Fa o Fr.</p><br>
+            <p><n style="font-size: 20px; color: #94e468;">Frecuencia acumulada:</n> Es la suma de las frecuencias absolutas o relativas desde el primer intervalo hasta el intervalo que se está considerando. Se representa con las letras Fa o Fr.</p><br>
 
     </section>
 
@@ -152,24 +152,24 @@
         <p> Es una forma de organizar y presentar datos cuantitativos, ya sean discretos o continuos, agrupándolos en clases o intervalos y mostrando la frecuencia con la que aparece 
             cada clase o intervalo. Es una herramienta fundamental para describir la distribución de los datos y obtener información sobre sus características principales.Elementos de una distribución de frecuencias:</p><br>
 
-            <p>Clases o intervalos: Son los grupos en los que se dividen los datos. Se definen por sus límites inferior y superior.</p><br>
+            <p><n style="font-size: 20px; color: #94e468;">Clases o intervalos:</n> Son los grupos en los que se dividen los datos. Se definen por sus límites inferior y superior.</p><br>
 
-            <p>Frecuencia absoluta: Es el número de veces que aparece un dato dentro de una clase o intervalo.</p><br>
+            <p><n style="font-size: 20px; color: #94e468;">Frecuencia absoluta:</n> Es el número de veces que aparece un dato dentro de una clase o intervalo.</p><br>
 
-            <p>Frecuencia relativa: Es la proporción de veces que aparece un dato dentro de una clase o intervalo, expresada como un porcentaje o una fracción. Se calcula dividiendo la frecuencia absoluta por el total de datos.</p><br>
+            <p><n style="font-size: 20px; color: #94e468;">Frecuencia relativa:</n> Es la proporción de veces que aparece un dato dentro de una clase o intervalo, expresada como un porcentaje o una fracción. Se calcula dividiendo la frecuencia absoluta por el total de datos.</p><br>
     </section>
 
     <section> <h2>1.6 Técnicas de agrupación de datos.</h2>
         <p>Es el proceso de organizar y dividir un conjunto de datos en clases o intervalos, con el objetivo de facilitar su análisis y comprensión. Esta técnica es especialmente útil cuando se trabaja con grandes conjuntos de datos, ya que permite resumir la información y obtener una visión general de la distribución de los datos.
             Existen diferentes técnicas de agrupación de datos, cada una con sus propias ventajas y desventajas:</p><br>
 
-            <p>1. Agrupación por igual ancho de clase:</p><br>
+            <p style="font-size: 20px; color: #94e468;">1. Agrupación por igual ancho de clase:</p><br>
 
             <p>Definición: Esta técnica consiste en dividir el rango de valores en clases o intervalos que tengan el mismo ancho. <br>
                 Ventajas: Es simple y fácil de implementar. <br>
                 Desventajas: Puede no ser adecuada para datos con distribuciones no uniformes, ya que puede generar clases con muy pocos o demasiados datos.</p><br>
 
-            <p>2. Agrupación por frecuencias iguales:</p><br>
+            <p style="font-size: 20px; color: #94e468;">2. Agrupación por frecuencias iguales:</p><br>
 
             <p>Definición: Esta técnica consiste en dividir el rango de valores en clases o intervalos que contengan un número aproximadamente igual de datos. <br>
                 Ventajas: Se asegura que todas las clases tengan un número similar de datos, lo que facilita la comparación. <br>
@@ -180,10 +180,10 @@
         <p>Son procedimientos estadísticos que se utilizan para seleccionar un subconjunto de elementos (muestra) de una población más grande, con el objetivo de obtener 
             información sobre toda la población a partir del análisis de la muestra.</p> <br>
 
-            <p>1. Muestreo probabilístico:</p><br>
+            <p style="font-size: 20px; color: #94e468;">1. Muestreo probabilístico:</p><br>
             <p>En el muestreo probabilístico, cada elemento de la población tiene una probabilidad conocida y no nula de ser seleccionado para la muestra. Esto garantiza que todos los elementos tengan la misma oportunidad de ser incluidos en la muestra.</p><br>
 
-            <p>2. Muestreo no probabilístico:</p><br>
+            <p style="font-size: 20px; color: #94e468;">2. Muestreo no probabilístico:</p><br>
             <p>En el muestreo no probabilístico, no se conoce la probabilidad de selección de cada elemento de la población. Esto significa que no todos los elementos tienen la misma oportunidad de ser incluidos en la muestra.</p><br>
     </section>
 
