Se corrigieron errores ortograficos

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 </ol>
     </section>
 
-    <section> <h2>1.2 Descripción de datos:</h2>
+    <section> <h2>1.2 Descripción de datos</h2>
         <ol>
             <li><n style="font-size: 20px; color: #94e468;">Datos agrupados y no agrupados</n><br>
 
@@ -136,7 +136,7 @@
                 </ol>
     </section>
 
-    <section> <h2>1.4 Parámetros para datos agrupados.</h2>
+    <section> <h2>1.4 Parámetros para datos agrupados</h2>
         <p>En probabilidad, los parámetros para datos agrupados se utilizan para describir las características de una distribución de probabilidad a partir de datos que han sido agrupados en intervalos o clases. 
             Estos parámetros son útiles para analizar la distribución de la variable aleatoria sin tener que trabajar con los datos individuales. Los principales parámetros para datos agrupados son:</p> <br>
 
@@ -148,7 +148,7 @@
 
     </section>
 
-    <section> <h2>1.5 Distribución de frecuencias.</h2>
+    <section> <h2>1.5 Distribución de frecuencias</h2>
         <p> Es una forma de organizar y presentar datos cuantitativos, ya sean discretos o continuos, agrupándolos en clases o intervalos y mostrando la frecuencia con la que aparece 
             cada clase o intervalo. Es una herramienta fundamental para describir la distribución de los datos y obtener información sobre sus características principales.Elementos de una distribución de frecuencias:</p><br>
 
@@ -159,7 +159,7 @@
             <p><n style="font-size: 20px; color: #94e468;">Frecuencia relativa:</n> Es la proporción de veces que aparece un dato dentro de una clase o intervalo, expresada como un porcentaje o una fracción. Se calcula dividiendo la frecuencia absoluta por el total de datos.</p><br>
     </section>
 
-    <section> <h2>1.6 Técnicas de agrupación de datos.</h2>
+    <section> <h2>1.6 Técnicas de agrupación de datos</h2>
         <p>Es el proceso de organizar y dividir un conjunto de datos en clases o intervalos, con el objetivo de facilitar su análisis y comprensión. Esta técnica es especialmente útil cuando se trabaja con grandes conjuntos de datos, ya que permite resumir la información y obtener una visión general de la distribución de los datos.
             Existen diferentes técnicas de agrupación de datos, cada una con sus propias ventajas y desventajas:</p><br>
 
@@ -176,7 +176,7 @@
                 Desventajas: Puede ser más compleja de implementar que la agrupación por igual ancho de clase y puede generar clases con anchos diferentes.</p><br>
     </section>
 
-    <section> <h2>1.7 Técnicas de muestreo.</h2>
+    <section> <h2>1.7 Técnicas de muestreo</h2>
         <p>Son procedimientos estadísticos que se utilizan para seleccionar un subconjunto de elementos (muestra) de una población más grande, con el objetivo de obtener 
             información sobre toda la población a partir del análisis de la muestra.</p> <br>
 
@@ -187,7 +187,7 @@
             <p>En el muestreo no probabilístico, no se conoce la probabilidad de selección de cada elemento de la población. Esto significa que no todos los elementos tienen la misma oportunidad de ser incluidos en la muestra.</p><br>
     </section>
 
-    <section> <h2>1.8. Histogramas.</h2>
+    <section> <h2>1.8. Histogramas</h2>
         <p>Un histograma es una representación gráfica que utiliza barras para mostrar la distribución de datos cuantitativos. Se construye dividiendo el rango de valores en intervalos o clases, y luego contando la frecuencia de datos que caen dentro de cada intervalo. 
             La altura de cada barra del histograma representa la frecuencia de datos para el intervalo correspondiente.
         <br>Son herramientas gráficas fundamentales en el ámbito de la probabilidad y la estadística, utilizados para representar la distribución de datos cuantitativos. </p> <br>
