Se completo toda la seccion del tema 2

--- a/index.html
+++ b/index.html
@@ -501,7 +501,7 @@ La probabilidad de un evento se calcula como la proporción de los resultados fa
 
 <strong>P(E):</strong> Probabilidad total del evento E. Representa la probabilidad de observar el evento E, independientemente de que H sea cierta o falsa. <br>
         </p>
-    </section>
+    </section>a
 
  <p> Autor: Yael Antonio Chavez Atanacio</p>
 </body>
