Se corrigieron errores de push

--- a/index.html
+++ b/index.html
@@ -503,6 +503,6 @@ La probabilidad de un evento se calcula como la proporción de los resultados fa
         </p>
     </section>a
 
- <p> Autor: Yael Antonio Chavez Atanacio</p>
+ <p> Author: Yael Antonio Chavez Atanacio</p>
 </body>
 </html>
