--- a/index.html
+++ b/index.html
@@ -501,7 +501,200 @@ La probabilidad de un evento se calcula como la proporción de los resultados fa
 
 <strong>P(E):</strong> Probabilidad total del evento E. Representa la probabilidad de observar el evento E, independientemente de que H sea cierta o falsa. <br>
         </p>
-    </section>a
+    </section>
+
+    <h1  style="text-align: center;">Tema 3 Variables Aleatorias</h1> 
+
+    <section> <h2>3.1 Variables aleatorias discretas</h2>
+        
+        <p>Son aquellas que solo pueden tomar un conjunto de valores finitos o infinitos. Las variables discretas solo pueden tomar valores específicos, como números enteros o valores contados, a diferencia de las variables aleatorias continuas, que pueden tomar cualquier valor dentro de un intervalo.</p>
+        <p><strong>Algunos ejemplos claros son:</strong> <br> <br>
+            La talla de una camiseta en una tienda de ropa (S, M, L, XL) <br>
+
+            El número de caras obtenidas al lanzar una moneda (0 o 1).
+         </p>
+    </section>
+
+    <section>
+        <h2>3.1.1 Distribución de probabilidad en forma general</h2>
+        <p>Es una función matemática que asigna la probabilidad de que ocurra un evento posible en un experimento aleatorio. La distribución de probabilidad proporciona una descripción detallada del comportamiento de la variable aleatoria que representa el resultado del experimento.
+        <br><br>
+        <strong>Elementos clave de una distribución de probabilidad</strong> <br> <br>
+
+    <strong>Conjunto de eventos:</strong> El conjunto de eventos posibles en el experimento aleatorio. <br>
+    <strong>Función de probabilidad:</strong> Una función que asigna a cada evento en el conjunto de eventos su probabilidad correspondiente. La suma de las probabilidades para todos los eventos debe ser igual a 1. <br>
+    <strong>Función de distribución:</strong> Una función que indica la probabilidad de que la variable aleatoria sea menor o igual a un valor específico. <br>
+
+        </p>
+    </section>
+
+    <section>
+        <h2>3.1.2 Valor esperado</h2>
+
+        <p>
+            Representa el promedio ponderado de todos los posibles valores de una variable aleatoria, donde cada valor se pondera por su probabilidad de ocurrencia.
+            <br> <br>
+            Matemáticamente, el valor esperado de una variable aleatoria discreta <strong>X</strong>, denotado por <strong>E(X)</strong>, se calcula como la suma del producto de cada valor posible <strong>(x)</strong> de <strong>X</strong> por su probabilidad correspondiente <strong>(P(x)):</strong>
+            <br> <br>
+            <strong>E(X) = Σ x * P(x)</strong>
+            <br><br>
+    <strong>Las características mas importantes son: </strong> <br> <br>
+    El valor esperado nos indica el resultado promedio que se espera obtener al realizar el experimento aleatorio un gran número de veces. <br>
+    Es una medida de tendencia central de la distribución de probabilidad de la variable aleatoria. <br>
+    Se utiliza en diversos campos, como la estadística, la economía, la física y la ingeniería, para analizar el comportamiento de sistemas aleatorios. <br>
+        </p>
+    </section>
+
+    <section>
+        <h2>3.1.3 Variancia, desviación estándar</h2>
+        <p>La varianza mide cuánto se dispersan los valores de una variable aleatoria alrededor de su media. Se calcula como el promedio de los cuadrados de las diferencias entre cada valor y la media.</p>
+        <p>Para una variable aleatoria discreta <strong>X</strong> con posibles valores (x1,x2) y probabilidades correspondientes. P(X=x 1),P(X=x 2 ). La varianza se calcula como: <br><br>
+            <strong>Varianza (σ²) = Σ [(xi - μ)²] / n</strong> <br> <br>
+
+            <strong>Donde:</strong> <br><br>
+        <strong>xi</strong> es el valor individual de cada dato. <br>
+        <strong>μ</strong> es la media del conjunto de datos. <br>
+        <strong>n</strong> es el número total de datos.
+        </p> <br> <br> <br>
+        <p>La desviación estándar indica, en promedio, cuánto se desvían los valores de la variable aleatoria respecto a su media. Es una medida comúnmente utilizada para evaluar la variabilidad en un conjunto de datos. Se calcula:
+            <br> <br>
+            <strong>Desviación estándar (σ) = √Varianza (σ²)</strong>
+        </p>
+    </section>
+
+    <section>
+        <h2>3.1.4 Función acumulada</h2>
+
+        <p>La función de distribución acumulada (FDA), también conocida como función de probabilidad acumulada (F), muestra la probabilidad de que una variable aleatoria X sea menor o igual a un valor específico X. En otras palabras, la FDA nos indica cuántas personas en la población tienen valores menores o iguales a x.
+        <br> <br>
+        <strong>Se define como:</strong> <br> <br>
+        F(x) = P(X ≤ x) <br>
+        Donde P(X ≤ x) representa la probabilidad del evento "X es menor o igual que x".
+        </p>
+    </section>
+
+    <section>
+        <h2>3.2 Variables aleatorias Continuas</h2>
+        <p>A diferencia de las variables aleatorias discretas, que solo pueden tomar valores específicos, esta puede tomar cualquier valor dentro de un intervalo (o colección de intervalos). En teoría, los valores de una variable aleatoria continua son incontables y están presentes en el conjunto de números reales.</p>
+    </section>
+
+    <section>
+        <h2>3.2.1 Distribución de probabilidad en forma general</h2>
+        <p>Es una función matemática que describe la probabilidad de que una variable aleatoria tome cada uno de sus posibles valores. En otras palabras, la distribución de probabilidad nos proporciona la distribución de frecuencias con la que cada valor posible de la variable aleatoria puede ocurrir.</p>
+        <p>
+            <strong>Las distribuciones de probabilidad se pueden representar gráficamente mediante:</strong> <br> <br>
+        <strong>Histogramas:</strong> Para variables aleatorias discretas, muestran la frecuencia de cada valor posible. <br>
+        <strong>Curvas de densidad de probabilidad:</strong> Para variables aleatorias continuas, muestran la probabilidad por unidad de intervalo de que la variable aleatoria tome un valor dentro de un intervalo específico. <br>
+        <strong>Funciones de distribución acumulada:</strong> Muestran la probabilidad de que la variable aleatoria sea menor o igual que un valor específico.</p>
+    </section>
+
+    <section>
+        <h2>3.2.2 Valor esperado</h2>
+        <p>El valor esperado de una variable aleatoria continua X, denotado por E(X), se calcula como la integral definida del producto de cada valor posible (x) de X por su función de densidad de probabilidad (f(x)) en el intervalo donde X puede tomar valores:
+<br> <br>
+        <strong>E(X) = ∫_a^b x * f(x) dx</strong> <br> <br>
+        <strong>Donde:</strong> <br> <br>
+
+a y b son los límites del intervalo donde X puede tomar valores. <br>
+f(x) es la función de densidad de probabilidad de X, que representa la probabilidad por unidad de intervalo de que X tome un valor dentro de un intervalo específico.
+        </p>
+    </section>
+
+    <section>
+        <h2>3.2.3 Variancia, desviación estándar.</h2>
+        <p>En el caso de variables aleatorias continuas, la varianza y la desviación estándar se calculan de manera similar a las variables aleatorias discretas, pero utilizando integrales en lugar de sumas. Ambas medidas nos ayudan a cuantificar la dispersión o variabilidad de los valores de la variable aleatoria alrededor de su valor esperado.</p>
+        <br> <br>
+        <p>La varianza (σ2) de una variable aleatoria continua llamada Var(X) se encuentra como la integral definida del cuadrado de la desviación de cada valor posible (x) de X respecto al valor esperado (E(X)) multiplicado por su función de densidad de probabilidad (f(x) en el intervalo donde X puede tener valores.</p>
+        <br><br>
+        <p><strong>Var(X) = σ² = ∫_a^b (x - E(X))² * f(x) dx</strong> <br> <br>
+
+            <strong>Donde:</strong> <br> <br>
+            
+            a y b son los límites del intervalo donde X puede tomar valores. <br>
+            E(X) es el valor esperado de X, calculado previamente. <br>
+            f(x) es la función de densidad de probabilidad de X.</p>
+
+            <br><br><br>
+            <p>La desviación estándar (σ) de una variable aleatoria continua X se calcula como la raíz cuadrada de la varianza:</p>
+<br>
+            <strong>σ = √Var(X) = √∫_a^b (x - E(X))² * f(x) dx</strong> <br><br>
+            <p><strong>Donde:</strong> <br> <br>
+
+                a y b representan los límites de altura mínima y máxima posibles para los estudiantes en la clase. <br>
+                E(X) es el valor esperado de la altura de los estudiantes, calculado previamente. <br>
+                f(x) es la función de densidad de probabilidad de la distribución normal que describe la distribución de alturas de los estudiantes.</p>
+    </section>
+
+    <section>   
+        <h2>3.2.4 Función acumulada</h2>
+        <p>
+            La función de distribución acumulada (FDA), también conocida como función de probabilidad acumulada (F), muestra la probabilidad de que una variable aleatoria continua X sea menor o igual a un valor específico x. En otras palabras, la FDA nos proporciona la cantidad de personas en la población para las que la variable aleatoria tiene valores que son iguales o menores a x.
+        <br> <br>
+        <strong>F(x) = P(X ≤ x)</strong> <br> <br>
+
+        <strong>Donde:</strong> <br> <br>
+        P(X ≤ x) representa la probabilidad del evento "X es menor o igual que x".
+        </p>
+    </section>
+
+    <section>
+        <h2>3.2.5 Cálculos de probabilidad</h2>
+
+        <p>Los cálculos de probabilidad son una forma de calcular la probabilidad de que ocurra un evento o conjunto de eventos. La probabilidad cuantifica la incertidumbre y se representa con números de 0 a 1 que indican que el evento no puede ocurrir y el evento ciertamente ocurrirá. Los cálculos de probabilidad se utilizan en una variedad de campos, incluyendo estadística, ciencias, ingeniería, economía, juegos de azar y mucho más. 
+<br> <br>
+Para un espacio muestral finito, si todos los resultados son igualmente probables, la probabilidad de un evento se define como: <br> <br>
+<strong><n style="font-size: 20px; color: #94e468;">Probabilidad Clásica</n></strong>
+        </p>
+        <p><math xmlns="http://www.w3.org/1998/Math/MathML">
+            <mi>P</mi><mo>(</mo><mi>E</mi><mo>)</mo><mo>=</mo><mfrac>
+            <mrow>
+                <mo>|</mo><mi>E</mi><mo>|</mo>
+            </mrow>
+            <mrow>
+                <mo>|</mo><mi>S</mi><mo>|</mo>
+            </mrow>
+            </mfrac>
+        </math></p>
+
+        <strong><n style="font-size: 20px; color: #94e468;">Regla de la Suma</n></strong> <br>
+    <p>Para eventos mutuamente excluyentes (que no pueden ocurrir simultáneamente):</p>
+    <p><math xmlns="http://www.w3.org/1998/Math/MathML">
+        <mi>P</mi><mo>(</mo><mi>A</mi><mo>∪</mo><mi>B</mi><mo>)</mo><mo>=</mo><mi>P</mi><mo>(</mo><mi>A</mi><mo>)</mo><mo>+</mo><mi>P</mi><mo>(</mo><mi>B</mi><mo>)</mo>
+    </math></p>
+
+    <strong><n style="font-size: 20px; color: #94e468;">Regla del Producto</n></strong>  <br>
+    <p>Para eventos independientes (la ocurrencia de uno no afecta la ocurrencia del otro):</p>
+    <p><math xmlns="http://www.w3.org/1998/Math/MathML">
+        <mi>P</mi><mo>(</mo><mi>A</mi><mo>∩</mo><mi>B</mi><mo>)</mo><mo>=</mo><mi>P</mi><mo>(</mo><mi>A</mi><mo>)</mo><mo>·</mo><mi>P</mi><mo>(</mo><mi>B</mi><mo>)</mo>
+    </math></p>
+
+    <strong>Teorema de Bayes</strong> <br>
+    <p><n style="font-size: 20px; color: #94e468;">Relaciona las probabilidades condicionales de dos eventos:</n></p>
+    <p><math xmlns="http://www.w3.org/1998/Math/MathML">
+        <mi>P</mi><mo>(</mo><mi>A</mi><mo>|</mo><mi>B</mi><mo>)</mo><mo>=</mo><mfrac>
+        <mrow>
+            <mi>P</mi><mo>(</mo><mi>B</mi><mo>|</mo><mi>A</mi><mo>)</mo><mo>·</mo><mi>P</mi><mo>(</mo><mi>A</mi><mo>)</mo>
+        </mrow>
+        <mrow>
+            <mi>P</mi><mo>(</mo><mi>B</mi><mo>)</mo>
+        </mrow>
+    </mfrac></math></p>
+
+    <strong><n style="font-size: 20px; color: #94e468;">Varianza para Variables Aleatorias Continuas</n></strong><br>
+    <p>Para una variable aleatoria continua <i>X</i> con una función de densidad de probabilidad <i>f(x)</i> y un valor esperado <i>E(X)</i>, la varianza <i>Var(X)</i> se define como:</p>
+    <p><math xmlns="http://www.w3.org/1998/Math/MathML">
+        <mi>Var</mi><mo>(</mo><mi>X</mi><mo>)</mo><mo>=</mo><mi>E</mi><mo>[</mo><mo>(</mo><mi>X</mi><mo>-</mo><mi>E</mi><mo>(</mo><mi>X</mi><mo>)</mo><msup><mo>)</mo><mn>2</mn></msup><mo>]</mo><mo>=</mo>
+        <msub><mo>∫</mo><mrow><mo>-∞</mo></mrow><mrow><mo>∞</mo></mrow></msub><mo>(</mo><mi>x</mi><mo>-</mo><mi>E</mi><mo>(</mo><mi>X</mi><mo>)</mo><msup><mo>)</mo><mn>2</mn></msup><mo>·</mo><mi>f</mi><mo>(</mo><mi>x</mi><mo>)</mo><mo>dx</mo>
+    </math></p>
+
+    <strong><n style="font-size: 20px; color: #94e468;">Desviación Estándar para Variables Aleatorias Continuas</n></strong><br>
+    <p>La desviación estándar es la raíz cuadrada de la varianza. Si <i>X</i> es una variable aleatoria continua con una varianza <i>Var(X)</i>, la desviación estándar <i>σ<sub>X</sub></i> se define como:</p>
+    <p><math xmlns="http://www.w3.org/1998/Math/MathML">
+        <msub><mi>σ</mi><mi>X</mi></msub><mo>=</mo><msqrt>
+        <mi>Var</mi><mo>(</mo><mi>X</mi><mo>)</mo>
+    </msqrt></math></p>
+
+    </section>
 
  <p> Author: Yael Antonio Chavez Atanacio</p>
 </body>
