Tema 5: Se agrego el tema 5 al temario

--- a/index.html
+++ b/index.html
@@ -802,6 +802,110 @@ Las propiedades clave de la distribución F son: <br><br>
 <strong>Grados de libertad:</strong> La forma de la distribución F depende de dos parámetros conocidos como grados de libertad (gl).
         </p>
     </section>
+
+    <h1  style="text-align: center;">Tema 5 Regresión lineal</h1> 
+    <section>
+        <h2>5.1 Regresión y correlación</h2>
+<p>
+    La regresión y la correlación son dos conceptos fundamentales para analizar la relación entre variables. Si bien a menudo se utilizan de manera conjunta, es importante comprender sus diferencias y aplicaciones específicas. 
+<br><br><strong>La correlación:</strong>
+<br><br>
+La correlación mide la fuerza y dirección de la asociación entre dos variables. <br>
+Un coeficiente de correlación positivo indica una correlación positiva, lo que significa que las variables suelen aumentar o disminuir juntas. <br>
+Un coeficiente de correlación negativo indica una correlación negativa, lo que significa que las variables suelen moverse en direcciones opuestas. <br>
+No hay una correlación lineal entre las variables, según un coeficiente de correlación cero.<br>
+
+<br><br>
+<strong>La regresión:</strong><br><br>
+La regresión es un conjunto de métodos estadísticos que se utilizan para representar la relación entre una variable dependiente (que se quiere predecir) y una o más variables independientes. <br>
+La ecuación que representa el modelo de regresión muestra cómo las variables independientes afectan a la variable dependiente.
+</p>
+    </section>
+
+<section>
+    <h2>5.1.1 Diagrama de dispersión</h2>
+    <p>Un diagrama de dispersión, también conocido como gráfico de puntos o nube de puntos, es una herramienta gráfica que se utiliza para mostrar las relaciones entre dos variables cuantitativas.
+<br><br>
+<strong>Los elementos que tiene son:</strong><br><br>
+<strong>Eje X:</strong> Representa la variable independiente. <br>
+<strong>Eje Y:</strong> Representa la variable dependiente. <br>
+<strong>Puntos:</strong> Cada punto del diagrama representa un par de valores (uno para la variable independiente y otro para la variable dependiente) de los datos.
+    </p>
+</section>
+<section>
+    <h2>5.1.2 Regresión lineal simple</h2>
+    <p>
+        Es un modelo estadístico que se utiliza para modelar la relación lineal entre una variable dependiente (Y) y una variable independiente (X).
+        <br><br><strong>La ecuación de la regresión lineal simple es:</strong>
+
+        <strong>Y = α + β * X + ε</strong>
+        
+        <strong>Donde:</strong> <br><br>
+        
+<strong>Y</strong> es la variable dependiente. <br>
+<strong>X</strong> es la variable independiente. <br>
+<strong>α</strong> es el intercepto, que representa el valor de Y cuando X es 0.  <br>
+<strong>β</strong> es la pendiente, que representa el cambio en Y por cada unidad de cambio en X. <br>
+<strong>ε</strong> es el término de error, que representa la variabilidad aleatoria en la relación entre Y y X
+    </p>
+</section>
+
+<section>
+    <h2>5.1.3 Correlación</h2>
+    <p>
+        La correlación mide la fuerza y la dirección de la relación lineal entre dos variables, tiene como objetivo determinar si existe una relación entre dos variables y cuán fuerte es esa relación.
+    </p>
+</section>
+
+<section>
+    <h2>5.1.4 Determinación y análisis de los coeficientes de correlación y de determinación</h2>
+    <p><strong>Un coeficiente de correlación</strong> es útil para identificar y medir la fuerza de la relación entre dos variables antes de realizar un análisis más profundo.</p><br>
+    <p><strong>Un coeficiente de eeterminación</strong>es fundamental en la regresión para evaluar qué tan bien el modelo predice la variable dependiente y para comparar diferentes modelos de regresión.
+    <br><br>
+    Ambos coeficientes son esenciales en estadística para comprender y medir las relaciones entre variables y evaluar la eficacia de los modelos predictivos.
+</p>
+</section>
+<section>
+    <h2>5.1.5 Distribución normal bidimensional</h2>
+    <p>
+        La distribución normal bidimensional se generaliza a dos variables aleatorias y se conoce como distribución normal bidimensional. La probabilidad conjunta de que dos variables aleatorias continuas (X y Y) tomen valores específicos se describe en esta distribución.
+<br>Es importante recordar que la distribución normal bidimensional es un modelo estadístico que asume que las variables siguen una distribución normal conjunta. Se deben considerar modelos alternativos si las variables no siguen esta distribución. Además, la inferencia causal basada en la correlación requiere un análisis minucioso y la consideración de los factores que podrían causar confusión. 
+    </p>
+</section>
+
+<section>
+    <h2>5.1.6 Intervalos de confianza y pruebas para el coeficiente de correlación</h2>
+    <p>
+        Las pruebas de coeficientes de correlación y los intervalos de confianza son técnicas cruciales para inferir propiedades de la población a partir de una muestra. Estos métodos ayudan a determinar si hay una correlación significativa entre dos variables y la precisión de la estimación.
+        <br> <br>
+<strong>Para calcular el coeficiente de correlación necesitamos:</strong><br><br>
+
+    1. Calcular el coeficiente de correlación muestral (r) a partir de los datos de la muestra. <br>
+    2. Determinar el tamaño de la muestra (n). <br>
+    3. Encontrar el valor z crítico correspondiente al nivel de confianza deseado. <br>
+    4. Calcular el error estándar del coeficiente de correlación.
+    </p>
+</section>
+<section>
+    <h2>5.1.7 Errores de medición</h2>
+    <p>
+        Son diferencias entre el valor medido de una cantidad y su valor verdadero. Estos errores son inevitablemente presentes en cualquier proceso de medición y pueden tener un impacto en la confiabilidad y precisión de los datos.
+        <br><br>
+        <strong>Algunos errores de medicion pueden ser:</strong>
+        <strong>Errores sistemáticos:</strong> Son errores constantes que se producen por causas específicas, como la calibración incorrecta del instrumento de medición, defectos en el instrumento o errores en el método de medición. Estos errores tienden a afectar todas las mediciones de la misma manera y pueden ser corregidos identificando y eliminando la causa. <br>
+        <strong>Errores aleatorios:</strong> Son errores variables que se producen por factores impredecibles, como las condiciones ambientales, la fatiga del observador o la naturaleza aleatoria del proceso que se está midiendo. Estos errores no pueden ser eliminados por completo, pero se pueden controlar y reducir su impacto mediante técnicas estadísticas.
+    </p><br>
+    <p>
+        Los errores de medición son una parte inevitable de cualquier proceso de medición. Sin embargo, existen técnicas para minimizar su impacto y garantizar la confiabilidad de los datos.
+    </p>
+</section>
+
+
+
+
+
+
+
  <p> Author: Yael Antonio Chavez Atanacio</p>
 </body>
 </html>
