Se agrego el notebook del tema 2

--- a/index.html
+++ b/index.html
@@ -177,6 +177,11 @@
             En situaciones donde hay múltiples opciones o combinaciones posibles, estas estrategias son particularmente útiles.
         <br>
         Las técnicas de conteo generalmente se basan en principios de conteo y combinatoria fundamentales, como el principio de multiplicación, las permutaciones y las combinaciones.
+    <br><br>
+        Para ello, se desarrollaron ejercicios: <br><center><iframe src="https://nbviewer.org/github/imacc19/EJERCICIOS-TEMA2-PE/blob/777e76ab8618457f8e97ff1632c68d62414f43bc/Ejercicios.ipynb" width="80%" height="800px"></iframe></center>
+   <br><br>
+   Si necesitas revisar los codigos completos para una mejor comprensión, te los dejo aca abajo: <br><br>
+<center><iframe src="https://nbviewer.org/github/imacc19/EJERCICIOS-TEMA2-PE/blob/777e76ab8618457f8e97ff1632c68d62414f43bc/codigosCompletos.ipynb" width="80%" height="800px"></iframe></center>
     </p>
     </section>   
 
