--- a/index.html
+++ b/index.html
@@ -22,6 +22,13 @@
             <li><n style="font-size: 20px; color: #94e468;">Parámetros aleatorios</n><br>  
                 Son características numéricas de una distribución de probabilidad que no se conocen con certeza y deben estimarse a partir de una muestra.
                 </ol>
+                <p>Para una mejor compresión, se creo un Notebook que engloba los sbtemas de este primer tema: <br>
+                    En <STrong>Frecuencias</STrong> puedes encontrar todos los codigos y las ejeciciones de cada ellos
+                    <br><br>
+        <br><center><iframe src="https://nbviewer.org/github/imac22/Frecuencias/blob/685d5fdfe6a3038fe4dfe63c0c09bedb8ac41843/numeros.ipynb" width="80%" height="800px"></iframe></center>
+    <br><br>
+    Aqui en             
+    </p>
     </section>
 
     <section> <h2>1.2 Descripción de datos</h2>
