--- a/index.html
+++ b/index.html
@@ -22,12 +22,9 @@
             <li><n style="font-size: 20px; color: #94e468;">Parámetros aleatorios</n><br>  
                 Son características numéricas de una distribución de probabilidad que no se conocen con certeza y deben estimarse a partir de una muestra.
                 </ol>
-                <p>Para una mejor compresión, se creo un Notebook que engloba los sbtemas de este primer tema: <br>
-                    En <STrong>Frecuencias</STrong> puedes encontrar todos los codigos y las ejeciciones de cada ellos
+                <p>Para una mejor compresión, se creo un Notebook que engloba los sbtemas de este primer tema. En <STrong>Frecuencias</STrong> puedes encontrar todos los codigos y las ejeciciones de cada ellos
                     <br><br>
-        <br><center><iframe src="https://nbviewer.org/github/imac22/Frecuencias/blob/685d5fdfe6a3038fe4dfe63c0c09bedb8ac41843/numeros.ipynb" width="80%" height="800px"></iframe></center>
-    <br><br>
-    Aqui en             
+                    <center><a href="tema1.html" class="boton-frecuencias">Frecuencias</a></center>         
     </p>
     </section>
 
@@ -185,12 +182,10 @@
         <br>
         Las técnicas de conteo generalmente se basan en principios de conteo y combinatoria fundamentales, como el principio de multiplicación, las permutaciones y las combinaciones.
     <br><br>
-        Para ello, se desarrollaron ejercicios: <br><center><iframe src="https://nbviewer.org/github/imacc19/EJERCICIOS-TEMA2-PE/blob/777e76ab8618457f8e97ff1632c68d62414f43bc/Ejercicios.ipynb" width="80%" height="800px"></iframe></center>
-   <br><br>
-   Si necesitas revisar los codigos completos para una mejor comprensión, te los dejo aca abajo: <br><br>
-<center><iframe src="https://nbviewer.org/github/imacc19/EJERCICIOS-TEMA2-PE/blob/777e76ab8618457f8e97ff1632c68d62414f43bc/codigosCompletos.ipynb" width="80%" height="800px"></iframe></center>
+        Para ello, se desarrollaron ejercicios: <br>
+        <center><a href="tema2.html" class="boton-frecuencias">Ejercicios</a></center> 
     </p>
-    
+
     </section>   
 
     <section> <h2>2.1.1 Principio aditivo.</h2>
@@ -914,13 +909,6 @@ La ecuación que representa el modelo de regresión muestra cómo las variables 
         Los errores de medición son una parte inevitable de cualquier proceso de medición. Sin embargo, existen técnicas para minimizar su impacto y garantizar la confiabilidad de los datos.
     </p>
 </section>
-
-
-
-
-
-
-
  <p> Author: Yael Antonio Chavez Atanacio</p>
 </body>
 </html>
